A few bug fixes, especially in Resampler2D including a workaround for a JAI 1.1.3 bug. For other files, replaced Hints.OVERVIEW_POLICY values from String to OverviewPolicy enum.
git-svn-id: https://svn.osgeo.org/geotools/geotools/trunk@29001 e5c1c795-43da-0310-a71f-fac65c449510